<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragmentc_scene"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ctob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vesaB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ctoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vesaA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="150dp"
        android:text="@string/Fragmento3"
        app:layout_constraintBottom_toTopOf="@+id/ctob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botovent"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="411dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:contentDescription="@string/descvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_toys_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="117dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:contentDescription="@string/descvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_toys_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="117dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:contentDescription="@string/descvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_toys_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="117dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:contentDescription="@string/descvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_toys_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="117dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>