<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragmentb_scene"
    tools:context="cat.copernic.finalsergiomejias.MainActivity">

    <Button
        android:id="@+id/btoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vesaC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/btoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vesaA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="150dp"
        android:text="@string/Fragmento2"
        app:layout_constraintBottom_toTopOf="@+id/btoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/neu"
        app:srcCompat="@drawable/ic_baseline_ac_unit_24"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="28dp" />

    <Button
        android:id="@+id/neu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botoneu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Fragmento2Titulo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>